--- a/pre-commit-config.yaml
+++ b/pre-commit-config.yaml
@@ -7,20 +7,25 @@ repos:
         language: system
         types: [python]
         args:
-          [
-            "-rn", # Only display messages
-            "-sn", # Don't display the score
-            "--rcfile=.pylintrc", # Link to your config file
-            "--load-plugins=pylint.extensions.docparams", # Load an extension
-          ]
+          - "-rn"
+          - "-sn"
+          - "--rcfile=.pylintrc"
+          - "--load-plugins=pylint.extensions.docparams"
+        # args:
+        #   [
+        #     "-rn", # Only display messages
+        #     "-sn", # Don't display the score
+        #     "--rcfile=.pylintrc", # Link to your config file
+        #     "--load-plugins=pylint.extensions.docparams", # Load an extension
+        #   ]
+
   - repo: local
     hooks:
       - id: requirements
         name: requirements
-        entry: >
-          .venv\Scripts\activate
-          pip freeze | findstr /V "@ file:" > requirements.txt
-          git add requirements.txt
+        entry: python scripts/update_requirements.py
         language: system
         pass_filenames: false
         stages: [commit]
+
+
