--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -7,11 +7,13 @@ repos:
         entry: pylint
         language: system
         types: [python]
+        require_serial: true
         args:
           - "-rn" # Only display messages
           - "-sn" # Don't display the score
           - "--rcfile=.pylintrc" # Link to your config file
           - "--load-plugins=pylint.extensions.docparams" # Load an extension
+        stages: [commit, push]
 
   - repo: local
     hooks:
@@ -20,6 +22,4 @@ repos:
         entry: python scripts/update_requirements.py
         language: system
         pass_filenames: false
-        stages: [commit]
-
-
+        stages: [commit, push]
