--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -13,7 +13,6 @@ repos:
           - "-sn" # Don't display the score
           - "--rcfile=.pylintrc" # Link to your config file
           - "--load-plugins=pylint.extensions.docparams" # Load an extension
-        stages: [commit, push]
 
   - repo: local
     hooks:
@@ -22,4 +21,4 @@ repos:
         entry: python scripts/update_requirements.py
         language: system
         pass_filenames: false
-        stages: [commit, push]
+        stages: [commit]
