--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -21,4 +21,4 @@ repos:
         entry: python scripts/update_requirements.py
         language: system
         pass_filenames: false
-        stages: [commit]
+        stages: [pre-commit]
