--- a/requirements.txt
+++ b/requirements.txt
@@ -1,18 +1,93 @@
 astroid==3.3.9
+asttokens==3.0.0
+certifi==2025.1.31
 cfgv==3.4.0
+charset-normalizer==3.4.1
 colorama==0.4.6
+coloredlogs==15.0.1
+comm==0.2.2
+contourpy==1.3.1
+cycler==0.12.1
+debugpy==1.8.13
+decorator==5.2.1
 dill==0.3.9
 distlib==0.3.9
-filelock==3.18.0
+executing==2.2.0
+filelock==3.13.1
+flatbuffers==25.2.10
+fonttools==4.56.0
+fsspec==2024.6.1
+humanfriendly==10.0
 identify==2.6.9
+idna==3.10
+imutils==0.5.4
+ipyfilechooser==0.6.0
+ipykernel==6.29.5
+ipython==9.0.2
+ipython_pygments_lexers==1.1.1
+ipywidgets==8.1.5
 isort==6.0.1
+jedi==0.19.2
+Jinja2==3.1.4
+jupyter_client==8.6.3
+jupyter_core==5.7.2
+jupyterlab_widgets==3.0.13
+kiwisolver==1.4.8
+MarkupSafe==2.1.5
+matplotlib==3.10.1
+matplotlib-inline==0.1.7
 mccabe==0.7.0
+motmetrics==1.4.0
+motrackers==0.0.2
+mpmath==1.3.0
+nest-asyncio==1.6.0
+networkx==3.3
 nodeenv==1.9.1
-numpy==2.2.4
+numpy==2.1.1
+onnx==1.17.0
+onnxruntime-gpu==1.21.0
+onnxslim==0.1.49
 opencv-python==4.11.0.86
+packaging==24.2
+pandas==2.2.3
+parso==0.8.4
+pillow==11.0.0
 platformdirs==4.3.7
 pre_commit==4.2.0
+prompt_toolkit==3.0.50
+protobuf==6.30.2
+psutil==7.0.0
+pure_eval==0.2.3
+py-cpuinfo==9.0.0
+Pygments==2.19.1
 pylint==3.3.6
+pyparsing==3.2.3
+pyreadline3==3.5.4
+python-dateutil==2.9.0.post0
+pytz==2025.2
+pywin32==310
 PyYAML==6.0.2
+pyzmq==26.3.0
+requests==2.32.3
+scipy==1.15.2
+seaborn==0.13.2
+setuptools==70.2.0
+six==1.17.0
+stack-data==0.6.3
+sympy==1.13.1
 tomlkit==0.13.2
+torch==2.6.0+cu118
+torchaudio==2.6.0+cu118
+torchvision==0.21.0+cu118
+tornado==6.4.2
+tqdm==4.67.1
+traitlets==5.14.3
+typing_extensions==4.12.2
+tzdata==2025.2
+ultralytics==8.3.99
+ultralytics-thop==2.0.14
+urllib3==2.3.0
 virtualenv==20.29.3
+wcwidth==0.2.13
+widgetsnbextension==4.0.13
+xmltodict==0.14.2
