--- a/.pylintrc
+++ b/.pylintrc
@@ -9,6 +9,7 @@ disable=
       C0321, # Multiple—statements.
       w0221, # Arguments-differ
       R0801, # Duplicate-code
+      E1101, # no-member
 
 # Analyse import fallback blocks. This can be used to support both Python 2 and
 # 3 compatible code, which means that the block might have code that exists
