--- a/requirements.txt
+++ b/requirements.txt
@@ -13,10 +13,10 @@ decorator==5.2.1
 dill==0.3.9
 distlib==0.3.9
 executing==2.2.0
-filelock==3.13.1
+filelock==3.18.0
 flatbuffers==25.2.10
 fonttools==4.56.0
-fsspec==2024.6.1
+fsspec==2025.3.1
 humanfriendly==10.0
 identify==2.6.9
 idna==3.10
@@ -28,30 +28,31 @@ ipython_pygments_lexers==1.1.1
 ipywidgets==8.1.5
 isort==6.0.1
 jedi==0.19.2
-Jinja2==3.1.4
+Jinja2==3.1.6
 jupyter_client==8.6.3
 jupyter_core==5.7.2
 jupyterlab_widgets==3.0.13
 kiwisolver==1.4.8
-MarkupSafe==2.1.5
+MarkupSafe==3.0.2
 matplotlib==3.10.1
 matplotlib-inline==0.1.7
 mccabe==0.7.0
 motmetrics==1.4.0
-motrackers==0.0.2
 mpmath==1.3.0
 nest-asyncio==1.6.0
-networkx==3.3
+networkx==3.4.2
 nodeenv==1.9.1
-numpy==2.1.1
+numpy==1.26.4
 onnx==1.17.0
 onnxruntime-gpu==1.21.0
 onnxslim==0.1.49
+opencv-contrib-python==4.11.0.86
 opencv-python==4.11.0.86
 packaging==24.2
 pandas==2.2.3
 parso==0.8.4
-pillow==11.0.0
+pillow==11.1.0
+pip-autoremove==0.10.0
 platformdirs==4.3.7
 pre_commit==4.2.0
 prompt_toolkit==3.0.50
@@ -71,7 +72,7 @@ pyzmq==26.3.0
 requests==2.32.3
 scipy==1.15.2
 seaborn==0.13.2
-setuptools==70.2.0
+setuptools==78.1.0
 six==1.17.0
 stack-data==0.6.3
 sympy==1.13.1
@@ -82,7 +83,7 @@ torchvision==0.21.0+cu118
 tornado==6.4.2
 tqdm==4.67.1
 traitlets==5.14.3
-typing_extensions==4.12.2
+typing_extensions==4.13.0
 tzdata==2025.2
 ultralytics==8.3.99
 ultralytics-thop==2.0.14
