--- a/requirements.txt
+++ b/requirements.txt
@@ -1,94 +1,229 @@
+annotated-types==0.7.0
+anyio==4.9.0
+appdirs==1.4.4
+argcomplete==3.6.1
+asgiref==3.8.1
 astroid==3.3.9
 asttokens==3.0.0
+attr==0.3.1
+attrs==25.3.0
+azure-core==1.32.0
+azure-storage-blob==12.25.1
+black==25.1.0
+bleach==5.0.1
+boto==2.49.0
+boto3==1.37.24
+botocore==1.37.24
+cachetools==5.5.2
 certifi==2025.1.31
+cffi==1.17.1
 cfgv==3.4.0
 charset-normalizer==3.4.1
+click==8.1.8
 colorama==0.4.6
 coloredlogs==15.0.1
 comm==0.2.2
 contourpy==1.3.1
+cryptography==44.0.2
 cycler==0.12.1
+datamodel-code-generator==0.26.1
 debugpy==1.8.13
 decorator==5.2.1
+defusedxml==0.7.1
+Deprecated==1.2.18
 dill==0.3.9
 distlib==0.3.9
+distro==1.9.0
+Django==5.1.7
+django-annoying==0.10.6
+django-cors-headers==3.6.0
+django-csp==3.7
+django-debug-toolbar==3.2.1
+django-environ==0.10.0
+django-extensions==3.2.3
+django-filter==24.3
+django-migration-linter==5.2.0
+django-model-utils==4.1.1
+django-ranged-fileresponse==0.1.2
+django-rq==2.10.3
+django-storages==1.12.3
+django-user-agents==0.4.0
+djangorestframework==3.15.2
+dnspython==2.7.0
+drf-dynamic-fields==0.3.0
+drf-flex-fields==0.9.5
+drf-generators==0.3.0
+email_validator==2.2.0
 executing==2.2.0
+expiringdict==1.2.2
+Faker==37.1.0
 filelock==3.18.0
 flatbuffers==25.2.10
 fonttools==4.56.0
 fsspec==2025.3.1
+genson==1.3.0
+google-api-core==2.24.2
+google-auth==2.38.0
+google-cloud-appengine-logging==1.6.1
+google-cloud-audit-log==0.3.2
+google-cloud-core==2.4.3
+google-cloud-logging==3.11.4
+google-cloud-storage==2.19.0
+google-crc32c==1.7.1
+google-resumable-media==2.7.2
+googleapis-common-protos==1.69.2
+grpc-google-iam-v1==0.14.2
+grpcio==1.71.0
+grpcio-status==1.71.0
+h11==0.14.0
+httpcore==1.0.7
+httpx==0.28.1
 humanfriendly==10.0
+humansignal-drf-yasg==1.21.10.post1
 identify==2.6.9
 idna==3.10
+ijson==3.3.0
+importlib_metadata==8.6.1
 imutils==0.5.4
+inflect==5.6.2
+inflection==0.5.1
 ipyfilechooser==0.6.0
 ipykernel==6.29.5
 ipython==9.0.2
 ipython_pygments_lexers==1.1.1
 ipywidgets==8.1.5
-isort==6.0.1
+isodate==0.7.2
+isort==5.13.2
 jedi==0.19.2
 Jinja2==3.1.6
+jiter==0.9.0
+jmespath==1.0.1
+joblib==1.4.2
+jsf==0.11.2
+jsonschema==4.23.0
+jsonschema-specifications==2024.10.1
 jupyter_client==8.6.3
 jupyter_core==5.7.2
 jupyterlab_widgets==3.0.13
 kiwisolver==1.4.8
+label-studio==1.16.0
+label-studio-sdk==1.0.10
+launchdarkly-server-sdk==8.2.1
+lockfile==0.12.2
+lxml==5.3.1
+lxml_html_clean==0.4.1
+markdown-it-py==3.0.0
 MarkupSafe==3.0.2
 matplotlib==3.10.1
 matplotlib-inline==0.1.7
 mccabe==0.7.0
+mdurl==0.1.2
 motmetrics==1.4.0
 mpmath==1.3.0
+mypy-extensions==1.0.0
 nest-asyncio==1.6.0
 networkx==3.4.2
+nltk==3.9.1
 nodeenv==1.9.1
 numpy==1.26.4
+nvidia-cuda-runtime-cu12==12.8.90
 onnx==1.17.0
 onnxruntime-gpu==1.21.0
 onnxslim==0.1.49
+openai==1.70.0
 opencv-contrib-python==4.11.0.86
 opencv-python==4.11.0.86
+opentelemetry-api==1.31.1
+ordered-set==4.0.2
 packaging==24.2
 pandas==2.2.3
 parso==0.8.4
+pathspec==0.12.1
 pillow==11.1.0
 pip-autoremove==0.10.0
 platformdirs==4.3.7
 pre_commit==4.2.0
 prompt_toolkit==3.0.50
-protobuf==6.30.2
+proto-plus==1.26.1
+protobuf==5.29.4
 psutil==7.0.0
+psycopg2-binary==2.9.10
 pure_eval==0.2.3
 py-cpuinfo==9.0.0
+pyasn1==0.6.1
+pyasn1_modules==0.4.2
+pyboxen==1.3.0
+pycparser==2.22
+pydantic==2.11.1
+pydantic_core==2.33.0
 Pygments==2.19.1
 pylint==3.3.6
 pyparsing==3.2.3
+PyQt5==5.15.11
+PyQt5-Qt5==5.15.2
+PyQt5_sip==12.17.0
 pyreadline3==3.5.4
+pyRFC3339==2.0.1
 python-dateutil==2.9.0.post0
-pytz==2025.2
+python-json-logger==2.0.4
+pytz==2022.7.1
 pywin32==310
 PyYAML==6.0.2
 pyzmq==26.3.0
+redis==5.2.1
+referencing==0.36.2
+regex==2024.11.6
 requests==2.32.3
+requests-file==2.1.0
+requests-mock==1.12.1
+rich==14.0.0
+rpds-py==0.24.0
+rq==1.16.2
+rsa==4.9
+rstr==3.2.2
+rules==3.4
+s3transfer==0.11.4
 scipy==1.15.2
 seaborn==0.13.2
+semver==3.0.4
+sentry-sdk==2.25.0
 setuptools==78.1.0
 six==1.17.0
+smart-open==7.1.0
+sniffio==1.3.1
+sqlparse==0.5.3
 stack-data==0.6.3
 sympy==1.13.1
+tensorrt==10.9.0.34
+tensorrt_cu12==10.9.0.34
+tensorrt_cu12_bindings==10.9.0.34
+tensorrt_cu12_libs==10.9.0.34
+tldextract==5.1.3
+toml==0.10.2
 tomlkit==0.13.2
-torch==2.6.0+cu118
-torchaudio==2.6.0+cu118
-torchvision==0.21.0+cu118
+torch==2.6.0 # +cu118
+torchaudio==2.6.0 # +cu118
+torchvision==0.21.0 # +cu118
 tornado==6.4.2
 tqdm==4.67.1
 traitlets==5.14.3
+typing-inspection==0.4.0
 typing_extensions==4.13.0
 tzdata==2025.2
+ua-parser==1.0.1
+ua-parser-builtins==0.18.0.post1
+ujson==5.10.0
 ultralytics==8.3.99
 ultralytics-thop==2.0.14
-urllib3==2.3.0
+uritemplate==4.1.1
+urllib3==1.26.20
+user-agents==2.2.0
 virtualenv==20.29.3
 wcwidth==0.2.13
+webencodings==0.5.1
+wheel==0.40.0
 widgetsnbextension==4.0.13
+wrapt==1.17.2
+xmljson==0.2.1
 xmltodict==0.14.2
+zipp==3.21.0
