--- a/src/label-image/ml/yolo/docker-compose.yml
+++ b/src/label-image/ml/yolo/docker-compose.yml
@@ -34,11 +34,12 @@ services:
 
       # Allow to use custom `model_path` in labeling configurations
       - ALLOW_CUSTOM_MODEL_PATH=true
+      - MODEL_PATH=/data/custom_model/bast_model/weights/best.pt
       # Show matplotlib debug plot for YOLO predictions
       - DEBUG_PLOT=false
       # Default score threshold, which is used to filter out low-confidence predictions,
       # you can change it in the labeling configuration using `model_score_threshold` parameter in the control tags
-      - MODEL_SCORE_THRESHOLD=0.5
+      - MODEL_SCORE_THRESHOLD=0.25
       # Model root directory, where the YOLO model files are stored
       - MODEL_ROOT=/app/models
     ports:
